--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-
-	"name": "my-hyperdev-app",
+	"name": "alien-extinction-riddle",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "by @JFTActual (twitter), @jthantranon(github)",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
